--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.0",
+    "express": "^4.17.1",
     "http-proxy": "^1.18.1",
     "ioredis": "^4.27.1",
     "node-fetch": "^2.6.1",
